# kubeget

./: .gitignore  README.md  app.env  docker-compose.yml  flake.nix  kubeget.Dockerfile  kubeget.tape  pyproject.toml
src/kubeget/: main.py
src/kubeget/utils/: api.py  formatter.py  logs.py
