[tool.poetry]
name = "kubeget"
version = "0.2.0"
description = "A cool CLI utility that lists pods using K8s API"
authors = ["Sagi Sarussi <me@sagis.dev>"]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/tuxiqae/kubeget"
repository = "https://github.com/tuxiqae/kubeget"
packages = [
    { include = "kubeget", from = "src" },
]

[tool.poetry.scripts]
kubeget = "kubeget.main:main"

[tool.poetry.dependencies]
python = "^3.10"
structlog = "^22.3.0"
requests = "^2.28.2"
kubernetes = "^26.1.0"
prettytable = "^3.6.0"
click = "^8.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/tuxiqae/kubeget/issues"
